# aias8

./: environment_env_aias_test.yml  share_folder_addresses.txt
llm_hands_on/: Chapter_1_Exercise_Vector Space.ipynb  Chapter_2_Exercise_Dataset.ipynb  Chapter_3_Excercise_Attention.ipynb  Chapter_4_Excercise_GPT.ipynb  Chapter_5_Excercise_Pretraining.ipynb  Chapter_6_Excercise_Finetuning_Classification.ipynb  Chapter_6_Excercise_Finetuning_Classification_LoRA.ipynb  Chapter_7_Exercise_Follow_Instructions.ipynb  Chapter_7_Exercise_Follow_Instructions_dpo.ipynb  previous_chapters.py  pyproject.toml  run_uv_jupyter.bat  sync_proj.bat
llm_hands_on/llm_from_scratch/: Chapter_2_Working_with_Text_Data_KR.ipynb  Chapter_3_Attention_Mechanisms_KR.ipynb  Chapter_4_Implementing_a_GPT_model_from_Scratch_To_Generate_Text_KR.ipynb  Chapter_5_Pretraining_on_Unlabeled Data_KR.ipynb  Chapter_6_Finetuning_for_Text_Classification_KR.ipynb  Chapter_6_Finetuning_for_Text_Classification_LoRA_KR.ipynb  Chapter_7_Finetuning_to_Follow_Instructions_KR.ipynb  exercise_experiments.py  gpt_train.py  llm-instruction-eval-openai.ipynb
llm_hands_on/llm_from_scratch/images/: Chapter_4_Excercise_GPT.ipynb
llm_hands_on/llm_from_scratch/llm 효율화/03_kv-cache/: README.ko.md  gpt_ch04.py
llm_hands_on/llm_from_scratch/llm 효율화/04_gqa/: README.ko.md  gpt_with_kv_gqa.py
llm_hands_on/llm_from_scratch/llm 효율화/05_mla/: README.ko.md  gpt_with_kv_mla.py
llm_hands_on/llm_from_scratch/llm 효율화/06_swa/: README.ko.md  gpt_with_kv_swa.py
llm_hands_on/llm_from_scratch/llm 효율화/07_moe/: README.ko.md  (+1 more)
(+59 files in other folders)
